--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="description" content="Free historic map for tourists visiting York, UK 🇬🇧. Short video breakdowns of each building and unseen curiosity in the city. Independent made.">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#192b4a" media="(prefers-color-scheme: dark)">
@@ -12,7 +12,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.css" rel="stylesheet" />
 
     <style>
-        body, html {
+        html, body {
             margin: 0;
             padding: 0;
             width: 100vw;
@@ -21,14 +21,22 @@
             display: flex;
             flex-direction: column;
             background: #E9E8E0;
-            overflow: hidden; /* Prevent scroll by default */
+            overflow: hidden;
+            box-sizing: border-box;
+        }
+
+        body {
+            /* Push all content below iOS status bar (safe area) */
+            padding-top: env(safe-area-inset-top, 0px);
         }
 
         #main-content {
             width: 100vw;
-            height: calc(100vh - 44.8px); /* 64px - 30% = 44.8px */
+            height: calc(100vh - 44.8px - env(safe-area-inset-top, 0px));
             position: relative;
             display: flex;
+            padding-top: 0; /* already handled by body */
+            box-sizing: border-box;
         }
 
         #map-section, #archive-section, #about-section {
@@ -51,6 +59,7 @@
             margin: 0;
             padding: 0;
             position: relative;
+            box-sizing: border-box;
         }
 
         #loading-screen {
@@ -65,6 +74,8 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
+            padding-top: env(safe-area-inset-top, 0px);
+            box-sizing: border-box;
         }
 
         #loading-icon {
@@ -104,6 +115,9 @@
             align-items: stretch;
             font-family: 'Poppins', sans-serif;
             user-select: none;
+            /* Ensure safe area for bottom (iPhone X+) */
+            padding-bottom: env(safe-area-inset-bottom, 0px);
+            box-sizing: border-box;
         }
         .bar-tab {
             flex: 1 1 0;
@@ -165,34 +179,33 @@
             font-weight: bold;
         }
         /* Mapbox control fixes for mobile safe area */
-.mapboxgl-ctrl-top-right {
-    position: absolute !important;
-    top: max(8px, env(safe-area-inset-top, 0px)) !important;
-    right: max(8px, env(safe-area-inset-right, 0px)) !important;
-    z-index: 10002 !important;
-    display: flex !important;
-    flex-direction: row !important;
-    align-items: flex-start !important;
-    pointer-events: auto !important;
-    opacity: 1 !important;
-}
+        .mapboxgl-ctrl-top-right {
+            position: absolute !important;
+            top: max(8px, env(safe-area-inset-top, 0px)) !important;
+            right: max(8px, env(safe-area-inset-right, 0px)) !important;
+            z-index: 10002 !important;
+            display: flex !important;
+            flex-direction: row !important;
+            align-items: flex-start !important;
+            pointer-events: auto !important;
+            opacity: 1 !important;
+        }
         .mapboxgl-ctrl-geolocate {
-    display: block !important;
-    opacity: 1 !important;
-    pointer-events: auto !important;
-    z-index: 10003 !important;
-}
-.mapboxgl-ctrl-logo {
-    left: 10px !important;
-    top: 10px !important;
-    right: auto !important;
-    bottom: auto !important;
-    /* Remove position: absolute !important; */
-    z-index: 10 !important;
-    display: block !important;
-    opacity: 1 !important;
-    pointer-events: auto !important;
-}
+            display: block !important;
+            opacity: 1 !important;
+            pointer-events: auto !important;
+            z-index: 10003 !important;
+        }
+        .mapboxgl-ctrl-logo {
+            left: 10px !important;
+            top: max(10px, env(safe-area-inset-top, 0px)) !important;
+            right: auto !important;
+            bottom: auto !important;
+            z-index: 10 !important;
+            display: block !important;
+            opacity: 1 !important;
+            pointer-events: auto !important;
+        }
         /* Enable vertical scrolling for archive and about sections ONLY */
         #archive-section, #about-section {
             overflow-y: auto;
